// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`euiTextStyles sizes m 1`] = `
"
    font-size: 1.1429rem;
    line-height: 1.7143rem;

    h1 {
      font-size: 2.4286rem;
      line-height: 2.8571rem;
    }
    h1:not(:last-child) {
      margin-block-end: 0.57145rem;
    }

    h2 {
      font-size: 1.9286rem;
      line-height: 2.2857rem;
    }
    h2:not(:last-child) {
      margin-block-end: 0.57145rem;
    }
    * + h2 {
      margin-block-start: 2.2858rem;
    }

    h3 {
      font-size: 1.5714rem;
      line-height: 1.7143rem;
    }
    h3:not(:last-child) {
      margin-block-end: 0.57145rem;
    }
    * + h3 {
      margin-block-start: 2.2858rem;
    }

    h4 {
      font-size: 1.1429rem;
      line-height: 1.7143rem;
    }
    h4:not(:last-child) {
      margin-block-end: 0.57145rem;
    }
    * + h4 {
      margin-block-start: 2.2858rem;
    }

    h5 {
      font-size: 1.0000rem;
      line-height: 1.4286rem;
    }
    h5:not(:last-child) {
      margin-block-end: 0.57145rem;
    }
    * + h5 {
      margin-block-start: 2.2858rem;
    }

    h6 {
      font-size: 0.8571rem;
      line-height: 1.1429rem;
    }
    h6:not(:last-child) {
      margin-block-end: 0.57145rem;
    }
    * + h6 {
      margin-block-start: 2.2858rem;
    }

    p,
    ul,
    ol,
    dl,
    blockquote,
    img,
    pre {
      margin-block-end: 1.7143rem;
    }

    ul,
    ol {
      margin-inline-start: 1.7143rem;
    }
  
    blockquote {
      font-size: 1.1429rem;
      padding: 1.7143rem;
    }

    dd + dt {
      margin-block-start: 1.1429rem;
    }

    dt,
    .eui-definitionListReverse dd {
      font-size: 1.1429rem;
      line-height: 1.7143rem;
    }

    .eui-definitionListReverse dt {
      font-size: 0.8571rem;
      color: #343741;
    }

    small {
      font-size: 1.0000rem;
    }

    pre {
      padding: 1.1429rem;
    }

    code {
      font-size: .9em; // 90% of parent font size
    }
  ;;label:m;"
`;

exports[`euiTextStyles sizes relative 1`] = `
"
    font-size: 1em;
    line-height: 1.5000;

    h1 {
      font-size: 2.125em;
      line-height: 1.2495;
    }
    h1:not(:last-child) {
      margin-block-end: 0.23529411764705882em;
    }

    h2 {
      font-size: 1.6875em;
      line-height: 1.2495;
    }
    h2:not(:last-child) {
      margin-block-end: 0.2962962962962963em;
    }
    * + h2 {
      margin-block-start: 1.1851851851851851em;
    }

    h3 {
      font-size: 1.375em;
      line-height: 1.2495;
    }
    h3:not(:last-child) {
      margin-block-end: 0.36363636363636365em;
    }
    * + h3 {
      margin-block-start: 1.4545454545454546em;
    }

    h4 {
      font-size: 1em;
      line-height: 1.5000;
    }
    h4:not(:last-child) {
      margin-block-end: 0.5em;
    }
    * + h4 {
      margin-block-start: 2em;
    }

    h5 {
      font-size: 0.875em;
      line-height: 1.5000;
    }
    h5:not(:last-child) {
      margin-block-end: 0.5714285714285714em;
    }
    * + h5 {
      margin-block-start: 2.2857142857142856em;
    }

    h6 {
      font-size: 0.75em;
      line-height: 1.5000;
    }
    h6:not(:last-child) {
      margin-block-end: 0.6666666666666666em;
    }
    * + h6 {
      margin-block-start: 2.6666666666666665em;
    }

    p,
    ul,
    ol,
    dl,
    blockquote,
    img,
    pre {
      margin-block-end: 1.5000em;
    }

    ul,
    ol {
      margin-inline-start: 1.5000em;
    }
  
    blockquote {
      font-size: 1em;
      padding: 1.5000em;
    }

    dd + dt {
      margin-block-start: 1em;
    }

    dt,
    .eui-definitionListReverse dd {
      font-size: 1em;
      line-height: 1.5000;
    }

    .eui-definitionListReverse dt {
      font-size: 0.75em;
      color: #343741;
    }

    small {
      font-size: 0.875em;
    }

    pre {
      padding: 1em;
    }

    code {
      font-size: .9em; // 90% of parent font size
    }
  ;;label:relative;"
`;

exports[`euiTextStyles sizes s 1`] = `
"
    font-size: 1.0000rem;
    line-height: 1.4286rem;

    h1 {
      font-size: 2.1250rem;
      line-height: 2.5714rem;
    }
    h1:not(:last-child) {
      margin-block-end: 0.5rem;
    }

    h2 {
      font-size: 1.6875rem;
      line-height: 2.0000rem;
    }
    h2:not(:last-child) {
      margin-block-end: 0.5rem;
    }
    * + h2 {
      margin-block-start: 2rem;
    }

    h3 {
      font-size: 1.3750rem;
      line-height: 1.7143rem;
    }
    h3:not(:last-child) {
      margin-block-end: 0.5rem;
    }
    * + h3 {
      margin-block-start: 2rem;
    }

    h4 {
      font-size: 1.0000rem;
      line-height: 1.4286rem;
    }
    h4:not(:last-child) {
      margin-block-end: 0.5rem;
    }
    * + h4 {
      margin-block-start: 2rem;
    }

    h5 {
      font-size: 0.8750rem;
      line-height: 1.1429rem;
    }
    h5:not(:last-child) {
      margin-block-end: 0.5rem;
    }
    * + h5 {
      margin-block-start: 2rem;
    }

    h6 {
      font-size: 0.7500rem;
      line-height: 1.1429rem;
    }
    h6:not(:last-child) {
      margin-block-end: 0.5rem;
    }
    * + h6 {
      margin-block-start: 2rem;
    }

    p,
    ul,
    ol,
    dl,
    blockquote,
    img,
    pre {
      margin-block-end: 1.4286rem;
    }

    ul,
    ol {
      margin-inline-start: 1.4286rem;
    }
  
    blockquote {
      font-size: 1.0000rem;
      padding: 1.4286rem;
    }

    dd + dt {
      margin-block-start: 1.0000rem;
    }

    dt,
    .eui-definitionListReverse dd {
      font-size: 1.0000rem;
      line-height: 1.4286rem;
    }

    .eui-definitionListReverse dt {
      font-size: 0.7500rem;
      color: #343741;
    }

    small {
      font-size: 0.8750rem;
    }

    pre {
      padding: 1.0000rem;
    }

    code {
      font-size: .9em; // 90% of parent font size
    }
  ;;label:s;"
`;

exports[`euiTextStyles sizes xs 1`] = `
"
    font-size: 0.8571rem;
    line-height: 1.1429rem;

    h1 {
      font-size: 1.8214rem;
      line-height: 2.2857rem;
    }
    h1:not(:last-child) {
      margin-block-end: 0.42855rem;
    }

    h2 {
      font-size: 1.4464rem;
      line-height: 1.7143rem;
    }
    h2:not(:last-child) {
      margin-block-end: 0.42855rem;
    }
    * + h2 {
      margin-block-start: 1.7142rem;
    }

    h3 {
      font-size: 1.1786rem;
      line-height: 1.4286rem;
    }
    h3:not(:last-child) {
      margin-block-end: 0.42855rem;
    }
    * + h3 {
      margin-block-start: 1.7142rem;
    }

    h4 {
      font-size: 0.8571rem;
      line-height: 1.1429rem;
    }
    h4:not(:last-child) {
      margin-block-end: 0.42855rem;
    }
    * + h4 {
      margin-block-start: 1.7142rem;
    }

    h5 {
      font-size: 0.7500rem;
      line-height: 1.1429rem;
    }
    h5:not(:last-child) {
      margin-block-end: 0.42855rem;
    }
    * + h5 {
      margin-block-start: 1.7142rem;
    }

    h6 {
      font-size: 0.6429rem;
      line-height: 0.8571rem;
    }
    h6:not(:last-child) {
      margin-block-end: 0.42855rem;
    }
    * + h6 {
      margin-block-start: 1.7142rem;
    }

    p,
    ul,
    ol,
    dl,
    blockquote,
    img,
    pre {
      margin-block-end: 1.1429rem;
    }

    ul,
    ol {
      margin-inline-start: 1.1429rem;
    }
  
    blockquote {
      font-size: 0.8571rem;
      padding: 1.1429rem;
    }

    dd + dt {
      margin-block-start: 0.8571rem;
    }

    dt,
    .eui-definitionListReverse dd {
      font-size: 0.8571rem;
      line-height: 1.1429rem;
    }

    .eui-definitionListReverse dt {
      font-size: 0.6429rem;
      color: #343741;
    }

    small {
      font-size: 0.7500rem;
    }

    pre {
      padding: 0.8571rem;
    }

    code {
      font-size: .9em; // 90% of parent font size
    }
  ;;label:xs;"
`;
